--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-URI_MONGODB=mongodb://localhost:27017/chatdb TOKEN_API_CHUTES=cpk_ba87b92c2eba4ad4a57ee29c7cf3c8cc.55bc34ef087a520ea54f87e1a2af4553.GqBhujDhxtafzfVVYHCVJuklcSry8A7i PUERTO=3000
+PUERTO=3000 TOKEN_API_CHUTES=cpk_ba87b92c2eba4ad4a57ee29c7cf3c8cc.55bc34ef087a520ea54f87e1a2af4553.GqBhujDhxtafzfVVYHCVJuklcSry8A7i
