--- a/package.json
+++ b/package.json
@@ -8,8 +8,6 @@
   },
   "dependencies": {
     "axios": "*",
-    "dotenv": "*",
-    "express": "*",
-    "mongoose": "*"
+    "express": "*"
   }
 }
